--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.KotlinRoomDBCRUD"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".flow.FlowActivity"
+            android:name=".dataBindingExample.recyclerView.ProductListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,9 +23,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".dataBindingExample.DataBindingActivity">
+        <activity
+            android:name=".flow.FlowActivity"
+            android:exported="true">
         </activity>
-        <activity android:name=".concepts.ConceptsActivity"></activity>
+        <activity android:name=".dataBindingExample.DataBindingActivity"></activity>
+        <activity android:name=".concepts.ConceptsActivity" />
         <activity
             android:name=".coroutine.SecondActivity"
             android:exported="false" />
