--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,13 +8,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 32
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.example.kotlinroomdbcrud"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
 
@@ -38,6 +38,9 @@ android {
     buildFeatures {
         viewBinding = true
         dataBinding = true
+    }
+    kapt {
+        correctErrorTypes true
     }
 }
 
@@ -79,9 +82,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation "com.squareup.okhttp3:logging-interceptor:4.5.0"
+    implementation 'com.airbnb.android:lottie:5.2.0'
+    implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
 
-    implementation 'com.google.dagger:dagger:2.40.5'
-    kapt 'com.google.dagger:dagger-compiler:2.40.5'
+    implementation 'com.google.dagger:dagger:2.42'
+    kapt 'com.google.dagger:dagger-compiler:2.42'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
