--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,8 @@ android {
 
     defaultConfig {
         applicationId "com.example.kotlinroomdbcrud"
-        minSdkVersion 21
+//        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 32
         versionCode 1
         versionName "1.0"
@@ -49,7 +50,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
@@ -85,10 +86,11 @@ dependencies {
     implementation 'com.airbnb.android:lottie:5.2.0'
     implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
 
-    implementation 'com.google.dagger:dagger:2.42'
-    kapt 'com.google.dagger:dagger-compiler:2.42'
-
     implementation project(path: ':easyratingview')
+    implementation project(path: ':CountryPicker')
+
+    implementation "com.github.zhpanvip:viewpagerindicator:1.1.0"
+    implementation "com.intuit.sdp:sdp-android:1.0.6"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
