--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.kotlinroomdbcrud">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:name=".util.Application"
+        tools:replace="android:theme"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,19 +18,35 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinRoomDBCRUD"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true" >
+        <activity
+            android:name=".ffmpeg.FfmpegActivity"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".intro_view_pager.IntroActivity"
-            android:exported="true">
-            <!-- <intent-filter>
+            android:exported="true" >
+
+            <!--
+             <intent-filter>
                  <action android:name="android.intent.action.MAIN" />
 
                  <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>-->
+             </intent-filter>
+            -->
         </activity>
         <activity
             android:name=".CountryCodePickerActivity"
-            android:exported="true">
+            android:exported="true" >
 
             <!--
             <intent-filter>
@@ -37,7 +58,7 @@
         </activity>
         <activity
             android:name=".ConstraintProfile"
-            android:exported="true">
+            android:exported="true" >
 
             <!--
             <intent-filter>
@@ -49,7 +70,7 @@
         </activity>
         <activity
             android:name=".multiViewRecyclerView.MultipleViewRVActivity"
-            android:exported="true">
+            android:exported="true" >
 
             <!--
             <intent-filter>
@@ -61,7 +82,7 @@
         </activity>
         <activity
             android:name=".ConstraintLayoutActivity"
-            android:exported="true">
+            android:exported="true" >
 
             <!--
             <intent-filter>
@@ -74,7 +95,7 @@
         <activity
             android:name=".splashScreenApi.SplashScreenApi"
             android:exported="true"
-            android:theme="@style/Theme.AppSplash.Starting">
+            android:theme="@style/Theme.AppSplash.Starting" >
 
             <!--
             <intent-filter>
@@ -86,7 +107,7 @@
         </activity>
         <activity
             android:name=".lottie.LottieSplashActivity"
-            android:exported="true">
+            android:exported="true" >
 
             <!--
             <intent-filter>
@@ -101,20 +122,21 @@
             android:exported="true" />
         <activity
             android:name=".flow.FlowActivity"
-            android:exported="true">
+            android:exported="true" >
+<!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+-->
         </activity>
         <activity android:name=".dataBindingExample.DataBindingActivity" />
         <activity android:name=".concepts.ConceptsActivity" />
         <activity
             android:name=".coroutine.SecondActivity"
             android:exported="false" />
-        <activity android:name=".coroutine.CoroutineActivity">
+        <activity android:name=".coroutine.CoroutineActivity" >
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
@@ -125,17 +147,17 @@
         </activity>
         <activity
             android:name=".navigationComponent.bottomSheetFragment.BottomSheetActivity"
-            android:exported="true">
+            android:exported="true" >
 
-<!--
+            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
--->
+            -->
         </activity>
-        <activity android:name=".navigationComponent.CustomObjectSafeArgs.CustomObjectActivity">
+        <activity android:name=".navigationComponent.CustomObjectSafeArgs.CustomObjectActivity" >
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
@@ -144,7 +166,7 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
-        <activity android:name=".navigationComponent.viewPager.AppActivity">
+        <activity android:name=".navigationComponent.viewPager.AppActivity" >
 
             <!--
              <intent-filter>
@@ -157,7 +179,8 @@
         </activity>
         <activity
             android:name=".navigationComponent.bottomNavigation"
-            android:exported="true">
+            android:exported="true" >
+
             <!--
                         <intent-filter>
                             <action android:name="android.intent.action.MAIN" />
@@ -166,7 +189,7 @@
                         </intent-filter>
             -->
         </activity>
-        <activity android:name=".navigationComponent.navigationDrawer">
+        <activity android:name=".navigationComponent.navigationDrawer" >
 
             <!--
             <intent-filter>
@@ -176,7 +199,7 @@
             </intent-filter>
             -->
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" >
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
